added padding to search column and added border to todayForecast container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,27 @@
+.search {
+    padding-top: 20px;
+}
+
+.form-group {
+    padding: 0px;
+}
+
+.list-group {
+    padding-top: 20px;
+}
+
+.todayForecast {
+    border: solid 1px #cecfd2;
+}
+
 #forecastContainer {
     display: none;
 }
 
 .btn-success, .btn-warning, .btn-danger {
     padding: 5px 7px 5px 7px;
+}
+
+.col-2 {
+    background-color: #F6F7F7;
 }
